--- a/src/web/styles/theme/_post.scss
+++ b/src/web/styles/theme/_post.scss
@@ -33,6 +33,13 @@ $codeBlockForegroundColor: $postAltForegroundColor;
 $codeCommentForegroundColor: gray;
 $codeBlockHighlightForeground: $altBackgroundColor;
 
+$fg1: #A600FF;
+$fg2: #23DEBA;
+$fg3: #F26413;
+$fg4: #B623DE;
+$fg5: #B623DE;
+$fg6: #B623DE;
+
 // other
 $articleBorderColor: $defForegroundColor;
 
