--- a/blog/css/post.css
+++ b/blog/css/post.css
@@ -68,6 +68,7 @@
  */
 article {
   background-color: #1a2a30;
+  min-width: 1150px;
   width: 60%;
   max-width: 1920px;
   margin: 3em auto;
@@ -84,7 +85,24 @@ article .post-header .post-title {
 }
 article .post-header .post-info {
   width: 100%;
-  border: 1px solid pink;
+}
+article .post-content h1 {
+  color: #A600FF;
+}
+article .post-content h2 {
+  color: #23DEBA;
+}
+article .post-content h3 {
+  color: #F26413;
+}
+article .post-content h4 {
+  color: #B623DE;
+}
+article .post-content h5 {
+  color: #B623DE;
+}
+article .post-content h6 {
+  color: #B623DE;
 }
 article .post-content .code-block {
   color: #dfdfdf;
@@ -107,6 +125,48 @@ article .post-content .code-block em {
 
 .centered {
   text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+  article {
+    margin: 2em auto;
+    min-width: 780px;
+    width: 90%;
+  }
+  article .post-header .post-title {
+    font-size: 2.2em;
+  }
+}
+@media screen and (max-width: 800px) {
+  article {
+    min-width: 560px;
+    width: auto;
+    margin: 1.5em 1em;
+  }
+  article .header-seperator {
+    margin: 1em -1em;
+  }
+  article .post-header .post-title {
+    font-size: 2em;
+  }
+}
+@media screen and (max-width: 600px) {
+  article {
+    min-width: 0;
+    width: 100%;
+    margin: 0;
+    border: none;
+    padding: 1em;
+  }
+  article .header-seperator {
+    margin: 1em -1em;
+  }
+  article .post-header .post-title {
+    font-size: 1.5em;
+  }
+  article .post-header .post-info {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=post.css.map */
