--- a/blog/css/styles.css
+++ b/blog/css/styles.css
@@ -118,13 +118,13 @@ body {
 }
 
 ::selection {
-  color: #8215D2;
-  background-color: #FFFFFF;
+  color: #FFFFFF;
+  background-color: #8215D2;
 }
 
 ::-moz-selection {
-  color: #8215D2;
-  background-color: #FFFFFF;
+  color: #FFFFFF;
+  background-color: #8215D2;
 }
 
 /*# sourceMappingURL=styles.css.map */
