--- a/src/web/styles/partials/_article.scss
+++ b/src/web/styles/partials/_article.scss
@@ -16,27 +16,34 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-// global color definitions
-// background
-$defBackgroundColor: #061820;
-$altBackgroundColor: #1a2a30;
-$selectionBackground: #8215D2;
+@import "../theme/post";
 
-// foreground
-$defForegroundColor: #dfdfdf;
-$altForegroundColor: #dfdfdf;
-$selectionForeground: #FFFFFF;
+@mixin article-styling {
+  background-color: $postDefBackgroundColor;
+  min-width: 1150px;
+  width: 60%;
+  max-width: 1920px;
+  margin: 3em auto;
+  padding: 1em 2em;
+  border: 1px dotted $articleBorderColor;
+}
 
+@mixin article-styling-1200px {
+  margin: 2em auto;
+  min-width: 780px;
+  width: 90%;
+}
 
+@mixin article-styling-800px($val) {
+  min-width: 560px;
+  width: auto;
+  margin: calc($val * 1.5) $val;
+}
 
-// apply text selection/highlight colors easily
-@mixin selectionColors($background, $foreground) {
-  ::selection { 
-    color: $foreground;
-    background-color: $background;
-  }
-  ::-moz-selection { 
-    color: $foreground;
-    background-color: $background;
-  }
+@mixin article-styling-600px($val) {
+  min-width: 0;
+  width: 100%;
+  margin: 0;
+  border: none;
+  padding: $val;
 }
