--- a/src/web/templates/partials/navbar.html
+++ b/src/web/templates/partials/navbar.html
@@ -19,14 +19,8 @@
 {{ define "partials/navbar.html" }}
 <nav id="navbar">
   <ul>
-    <a href="google.com">
-      <li>Google</li>
-    </a>
-    <a href="https://google.com">
-      <li>YouTube</li>
-    </a>
-    <a href="https://myanimelist.net">
-      <li>MyAnimeList</li>
+    <a href="https://www.youtube.com/watch?v=DaWbq6KeJq4&list=RDxA_4ZFe1TME&index=16">
+      <li>This UGLY Navbar Is Just A Placeholder</li>
     </a>
   </ul>
 </nav>
