--- a/blog/css/post.css
+++ b/blog/css/post.css
@@ -66,6 +66,57 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
+/*
+ * vidhukant.xyz: Vidhu Kant's Personal Website
+ * Copyright (C) 2022  Vidhu Kant Sharma <vidhukant@protonmail.ch>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+/*
+ * vidhukant.xyz: Vidhu Kant's Personal Website
+ * Copyright (C) 2022  Vidhu Kant Sharma <vidhukant@protonmail.ch>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+/*
+ * vidhukant.xyz: Vidhu Kant's Personal Website
+ * Copyright (C) 2022  Vidhu Kant Sharma <vidhukant@protonmail.ch>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
 article {
   background-color: #1a2a30;
   min-width: 1150px;
@@ -75,31 +126,63 @@ article {
   padding: 1em 2em;
   border: 1px dotted #dfdfdf;
 }
-article .header-seperator {
-  margin: 1em -2em;
-}
 article .post-header .post-title {
   font-size: 2.5em;
   text-align: center;
-  color: #dd237d;
+  color: #dea2c2;
 }
 article .post-header .post-info {
   width: 100%;
 }
+article .header-seperator {
+  margin: 1.1em 0;
+}
+article img {
+  object-fit: contain;
+  min-width: 300px;
+  max-width: 50%;
+  min-height: 300px;
+  max-height: 600px;
+  height: auto;
+}
+article img.root-img {
+  min-width: 400px;
+  width: 60%;
+}
+article img.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+article .image-flexbox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+article .image-flexbox img {
+  all: initial;
+  max-height: 25em;
+  margin: 0.5em;
+}
+article li {
+  color: #F26413;
+}
 article .post-content h1 {
-  color: #A600FF;
+  color: #FFFFFF;
 }
 article .post-content h2 {
-  color: #23DEBA;
+  color: #28c7d4;
 }
 article .post-content h3 {
   color: #F26413;
 }
 article .post-content h4 {
-  color: #B623DE;
+  color: #23DEBA;
 }
 article .post-content h5 {
-  color: #B623DE;
+  color: #A600FF;
 }
 article .post-content h6 {
   color: #B623DE;
@@ -133,6 +216,9 @@ article .post-content .code-block em {
     min-width: 780px;
     width: 90%;
   }
+  article .header-seperator {
+    margin: 1em -2em;
+  }
   article .post-header .post-title {
     font-size: 2.2em;
   }
@@ -143,11 +229,35 @@ article .post-content .code-block em {
     width: auto;
     margin: 1.5em 1em;
   }
-  article .header-seperator {
-    margin: 1em -1em;
-  }
   article .post-header .post-title {
     font-size: 2em;
+  }
+  article .header-seperator {
+    margin: 1em -2em;
+  }
+  article img {
+    min-width: auto;
+    max-width: 95%;
+    min-height: auto;
+    max-height: auto;
+  }
+  article .image-flexbox img {
+    all: initial;
+    max-height: 600px;
+    max-width: 95%;
+    margin: 0.5em;
+  }
+  article ul {
+    width: 100%;
+  }
+  article ul li {
+    width: 100%;
+  }
+  article ul li .image-flexbox {
+    width: 95%;
+  }
+  article ul li .image-flexbox img {
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 600px) {
@@ -157,6 +267,10 @@ article .post-content .code-block em {
     margin: 0;
     border: none;
     padding: 1em;
+  }
+  article img.root-img {
+    min-width: 300px;
+    width: 80%;
   }
   article .header-seperator {
     margin: 1em -1em;
