--- a/src/web/styles/partials/_navbar.scss
+++ b/src/web/styles/partials/_navbar.scss
@@ -25,19 +25,29 @@
   background-color: $navbarBackgroundColor;
   position: sticky;
   top: 0;
-  margin: 0;
+  box-shadow: $navbarShadow;
 
   ul {
     list-style-type: none;
     height: 100%;
-    margin: 0; 
+    min-width: 400px;
+    max-width: 500px;
+    margin: 0 auto; 
     padding: 0;
     display: flex;
+    justify-content: space-around;
     align-items: center;
 
     li {
       padding: 0;
       margin: 0 0.5em;
+    }
+
+    a {
+      font-size: 1.3em;
+      font-weight: 500;
+      text-decoration: none;
+      color: $navbarForegroundColor;
     }
   }
 }
