--- a/src/web/styles/styles.scss
+++ b/src/web/styles/styles.scss
@@ -37,5 +37,11 @@ body {
   color: $defForegroundColor;
 }
 
-@include selectionColors(#8215D2, #FFFFFF)
+@include selectionColors($selectionBackground, $selectionForeground);
+
+a {
+
+}
+
+
 
