--- a/src/web/templates/views/post.html
+++ b/src/web/templates/views/post.html
@@ -22,11 +22,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="BLOG DESCRIPTION GHERE" />
+  <meta name="description" content="Vidhu Kant's Blog Post #{{ .ID }}: {{ .Title }}" />
   <link type="text/css" rel="stylesheet" href="/css/styles.css">
   <link type="text/css" rel="stylesheet" href="/css/post.css">
   <title>
-    BLOG TITLE HERE
+    {{ .Title }} | Vidhu Kant's Blog Post
   </title>
 </head>
 <body>
