made the created/last updated date prettier and responsive

--- a/src/web/templates/views/posts.html
+++ b/src/web/templates/views/posts.html
@@ -34,7 +34,7 @@
   <article>
     {{range .Posts}}
       <div class="post">
-        <a href="posts/{{ .ID }}"> {{ .Title }} </a>
+        <a href="{{ .ID }}"> {{ .Title }} </a>
       </div>
     {{end}}
   </article>
