--- a/src/web/styles/post/post.scss
+++ b/src/web/styles/post/post.scss
@@ -20,10 +20,6 @@
 @import "../theme/post";
 @import "../partials/article";
 
-// header {
-// 
-// }
-
 article {
   @include article-styling;
   .post-header {
@@ -34,6 +30,9 @@ article {
     }
     .post-info {
       width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
   }
 
@@ -110,10 +109,6 @@ article {
   }
 }
 
-// footer {
-// 
-// }
-
 .centered {
   text-align: center;
 }
@@ -183,7 +178,9 @@ article {
       .post-title { font-size: 1.5em; }
       // NOTE: might need to be modified i.e
       // content goes to next line instead of overflowing
-      .post-info { width: 100%; }
+      .post-info {
+        justify-content: center;
+      }
     }
   }
 }
