--- a/src/web/templates/views/post.html
+++ b/src/web/templates/views/post.html
@@ -37,10 +37,10 @@
         {{ .Title }}
       </h1>
       <div class="post-info" id="info">
-        <span class="post-createdat" id="created-at">Created: {{ .CreatedAt }}</span>
-        {{ if .UpdatedAt }}
-          <span class="post-createdat" id="created-at">Last Updated: {{ .UpdatedAt }} </span>
-        {{- end }}
+        <span class="post-created-at" id="created-at">
+          {{ .CreatedAt }}
+          {{ if .UpdatedAt }} <span class="post-updated-at" id="created-at">(Last Updated {{ .UpdatedAt }})</span> {{- end }}
+        </span>
       </div>
     </div>
     <hr class="header-seperator">
@@ -50,6 +50,7 @@
     </div>
 
     <div class="post-footer" id="footer">
+      <a href="/posts">GO BACK</a>
       {{ .post_footer }}
     </div>
   </article>
