style anchor tags

--- a/src/web/styles/styles.scss
+++ b/src/web/styles/styles.scss
@@ -40,7 +40,8 @@ body {
 @include selectionColors($selectionBackground, $selectionForeground);
 
 a {
-
+  color: $defLinkForeground;
+  text-decoration: none;
 }
 
 
