--- a/src/web/styles/theme/_global.scss
+++ b/src/web/styles/theme/_global.scss
@@ -26,6 +26,7 @@ $selectionBackground: #8215D2;
 $defForegroundColor: #dfdfdf;
 $altForegroundColor: #dfdfdf;
 $selectionForeground: #FFFFFF;
+$defLinkForeground: #3691b8;
 
 
 
