added page number to the posts page

--- a/src/web/styles/post/post.scss
+++ b/src/web/styles/post/post.scss
@@ -29,6 +29,7 @@ article {
       color: $postTitleColor;
     }
     .post-info {
+      color: $postInfoForegroundColor;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
