conditionally showing prev/next page buttons

--- a/src/web/styles/theme/_post.scss
+++ b/src/web/styles/theme/_post.scss
@@ -73,3 +73,4 @@ $post-600px-padding: 1em;
 $posts_postTitleColor: $defForegroundColor;
 $posts_postHighlightedTitleColor: $defLinkForeground;
 $posts_postInfoForegroundColor: $postInfoForegroundColor;
+$posts_postTagForegroundColor: $postInfoForegroundColor;
