--- a/src/web/styles/post/posts.scss
+++ b/src/web/styles/post/posts.scss
@@ -49,16 +49,32 @@ article {
     .post {
       padding: 0.5em 0;
       font-size: 1.4em;
-      .post-title {
-        color: $posts_postTitleColor;
-      }
-      .post-title:hover {
-        color: $posts_postHighlightedTitleColor;
+
+      .post-title-tags {
+        .post-title {
+          font-size: 1em;
+          color: $posts_postTitleColor;
+        }
+
+        .post-title:hover {
+          color: $posts_postHighlightedTitleColor;
+        }
+
+        .post-tag {
+          font-size: 0.8em;
+          color: $posts_postTagForegroundColor;
+        }
+
+        .post-tag:hover {
+          color: $defLinkForeground;
+        }
       }
 
       .post-info {
         font-size: 0.8em;
-        color: $posts_postInfoForegroundColor;
+        .post-createdat {
+          color: $posts_postInfoForegroundColor;
+        }
       }
     }
   }
