--- a/src/web/templates/views/posts.html
+++ b/src/web/templates/views/posts.html
@@ -43,14 +43,25 @@
         {{ end }}
       </span>
       <span class="paging-options">
-        <a href="?page={{ .PrevPage }}&limit={{ .Limit }}&first={{ .PrevFirst }}">Previous Page</a>
-        <a href="?page={{ .NextPage }}&limit={{ .Limit }}&first={{ .NextFirst }}">Next Page</a>
+        {{ if .ShowPrev }}
+          <a href="?page={{ .PrevPage }}&limit={{ .Limit }}&first={{ .PrevFirst }}">Previous Page</a>
+        {{- end }}
+        {{ if .ShowNext }}
+          <a href="?page={{ .NextPage }}&limit={{ .Limit }}&first={{ .NextFirst }}">Next Page</a>
+        {{- end }}
       </span>
     </div>
     <div class="posts">
       {{ range .Posts }}
         <div class="post">
-          <a class="post-title" href="{{ .ID }}">{{ .Title }}</a>
+          <span class="post-title-tags">
+            <a class="post-title" href="{{ .ID }}">{{ .Title }}</a>
+            <span class="post-tags">
+              {{ range .Tags }}
+                <a class="post-tag" href="/posts/1">{{ . }}</a>
+              {{ end }}
+            </span>
+          </span>
           <div class="post-info">
             <span class="post-createdat">{{ .CreatedAt }}</span>
           </div>
