--- a/src/web/styles/theme/_global.scss
+++ b/src/web/styles/theme/_global.scss
@@ -22,7 +22,8 @@
 $defBackgroundColor: #151718;
 // $altBackgroundColor: #1a2a30;
 // $defBackgroundColor: #383A59;
-$altBackgroundColor: #282A36;
+// $altBackgroundColor: #282A36;
+$altBackgroundColor: #232627;
 $selectionBackground: #8215D2;
 
 // foreground
