--- a/src/web/templates/views/home.html
+++ b/src/web/templates/views/home.html
@@ -33,6 +33,14 @@
     <p id="welcome-subtitle">Here, I talk about the various topics that interest me.</p>
     <p>-- important links, maybe navbar, info (probably shit like last update date or number of blogs this week/month/whatever) --</p>
   </div>
+
+  <div class="links-container" id="links">
+    <span class="links">
+      <a href="/posts">View All Posts</a>
+      <a href="/tags">Filter By Tags</a>
+      <a href="/about">About This Blog</a>
+    </span>
+  </div>
   {{ .Message }}
 </body>
 </html>
