--- a/src/web/styles/home.scss
+++ b/src/web/styles/home.scss
@@ -16,40 +16,72 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-@import "partials/home";
 @import "theme/global";
+@import "theme/home";
+@import "partials/home";
 
-body {
-  @include home-body;
+body { @include home-body; }
 
-  .header {
-    text-align: center;
-    #welcome-title { 
-      color: $fg-purple0; 
-    }
-    #welcome-subtitle { 
-      font-size: 1.1rem;
-      color: $fg-yellow0; 
+.header {
+  text-align: center;
+  #welcome-title { 
+    color: $welcomeHeadingFG;
+  }
+  #welcome-subtitle { 
+    font-size: 1.1em;
+    color: $welcomeHeadingAltFG; 
+  }
+}
+
+.links-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+    // border: 1px solid pink;
+
+  .links {
+    max-width: 42em;
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.1em;
+      background-color: $buttonBackgroundColor;
+      height: 3rem;
+      min-width: 10em;
+      border: 1px solid $buttonBorderColor;
+      border-radius: 2em;
     }
   }
 }
 
 @media screen and (max-width: 1200px) {
-  body {
-    @include home-body-1200px;
-  }
+  body { @include home-body-1200px; }
 }
 
 @media screen and (max-width: 800px) {
-  body {
-    $side-margin: 1em;
-    @include home-body-800px($side-margin);
+  body { @include home-body-800px; }
+  .links-container .links {
+    a {
+      font-size: 1em;
+      min-width: 9em;
+      margin: 0.3em auto;
+    }
   }
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    $padding: 1em;
-    @include home-body-600px($padding);
+  body { @include home-body-600px; }
+  .links-container .links {
+    a {
+      font-size: 0.9em;
+      min-width: 8.5em;
+    }
   }
 }
