--- a/src/web/styles/theme/_home.scss
+++ b/src/web/styles/theme/_home.scss
@@ -24,6 +24,7 @@ $buttonBorderColor: #000000;
 
 $welcomeHeadingFG: $fg-purple0;
 $welcomeHeadingAltFG: $fg-yellow0;
+$recentsLabelFG: $fg-pink0;
 
-
+$recentsItemBG: $altBackgroundColor;
 
