somehow filtering posts by *a* tag

--- a/src/web/templates/views/home.html
+++ b/src/web/templates/views/home.html
@@ -22,14 +22,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Vidhu Kant's Personal Blog" />
+  <meta name="description" content="Vidhu Kant's Blog" />
   <link type="text/css" rel="stylesheet" href="/css/styles.css">
   <link type="text/css" rel="stylesheet" href="/css/home.css">
   <title>Vidhu Kant's Blog</title>
 </head>
 <body>
   <div class="header" id="header">
-    <h1 id="welcome-title">Welcome to Vidhu Kant's Personal Blog!</h1>
+    <h1 id="welcome-title">Welcome to Vidhu Kant's Blog!</h1>
     <p id="welcome-subtitle">Here, I talk about the various topics that interest me.</p>
     <p>-- important links, maybe navbar, info (probably shit like last update date or number of blogs this week/month/whatever) --</p>
   </div>
@@ -49,7 +49,8 @@
     <div class="posts" id="recent-posts">
       {{ range .RecentPosts }}
         <div class="post">
-          <span class="post-createdat">{{ .CreatedAt }}:</span> <a href="/posts/{{ .ID }}">{{ .Title }}</a>
+          <span class="post-createdat">{{ .CreatedAt }}: </span>
+          <a href="/posts/{{ .ID }}">{{ .Title }}</a>
         </div>
       {{ end }}
     </div>
@@ -59,7 +60,9 @@
       Browse Articles by Tags:
     </h2>
     <div class="tags" id="recent-tags">
-
+      {{ range .Tags}}
+        <a href="/posts/?tags={{ .ID }}">{{ .Name }}</a>
+      {{ end }}
     </div>
   </div>
 
