--- a/src/web/styles/home.scss
+++ b/src/web/styles/home.scss
@@ -128,12 +128,16 @@ body { @include home-body; }
     }
   }
   .recents {
+    .recents-label {
+      padding: 0 0.8rem
+    }
     .posts, .tags {
       padding: 0.2rem 0.8rem;
       width: 100%;
       border: none;
     }
     .posts {
+      // background-color: $defBackgroundColor;
       .post {
         a {
           font-size: 0.8em;
