added option to sort by latest/oldest

--- a/src/web/styles/post/posts.scss
+++ b/src/web/styles/post/posts.scss
@@ -45,6 +45,10 @@ article {
     }
   }
 
+  #options-footer {
+    justify-content: center;
+  }
+
   .posts {
     .post {
       padding: 0.5em 0;
