fixed 'sort by oldest' not working properly and sometimes sorting the wrong way

--- a/src/web/templates/views/posts.html
+++ b/src/web/templates/views/posts.html
@@ -36,7 +36,7 @@
       <span class="limit-options">
         Posts to show per page: 
         {{ range .LimitOptions }}
-          <a href="?page={{ $.PageNumber }}&limit={{ . }}&first={{ $.FirstPost }}" 
+          <a href="?page={{ $.PageNumber }}&limit={{ . }}&first={{ $.FirstPost }}&sort_by={{ if $.SortByOldest }}oldest{{ else }}newest{{ end }}"
             class="{{ if eq . $.Limit }}active{{- end }}">
             {{ . }}
           </a> 
