created a form to filter by tags (not really working)

--- a/src/web/styles/post/posts.scss
+++ b/src/web/styles/post/posts.scss
@@ -19,6 +19,7 @@
 @import "../theme/global";
 @import "../theme/post";
 @import "../partials/article";
+@import "../partials/tags_menu";
 
 article {
   @include article-styling;
