--- a/src/web/templates/views/posts.html
+++ b/src/web/templates/views/posts.html
@@ -31,6 +31,7 @@
 </head>
 <body>
   {{ template "partials/navbar.html" .}}
+  {{ template "partials/tags_menu.html" .}}
   <article>
     <div class="options" id="options-header">
       <span class="limit-options">
